# RMG-K

./: .gitignore  CMakeLists.txt  README.md  RMG-K.exe - Shortcut.lnk
.github/workflows/: build.yml
GekkoNet-main/GekkoLib/src/: backend.cpp
Package/AppImage/: Create.sh
Source/RMG/: CMakeLists.txt  EnvVars.hpp  OnScreenDisplay.cpp  OnScreenDisplay.hpp  main.cpp
Source/RMG-Audio-Capture/: CMakeLists.txt  audio_capture_plugin.cpp
Source/RMG-Core/: Archive.cpp  Archive.hpp  CMakeLists.txt  Emulation.cpp  Emulation.hpp  Kaillera.cpp  Kaillera.hpp  RollbackNetcode.cpp  RollbackNetcode.hpp  Settings.cpp  Settings.hpp  rmgk_gekko.cpp  rmgk_gekko.hpp  rmgk_ggpo.cpp  rmgk_ggpo.hpp
Source/RMG-Core/m64p/api/: m64p_types.h
Source/RMG-Input/: common.hpp  main.cpp
Source/RMG-Input-GCA/: GCInput.hpp  main.cpp
Source/RMG-Input-GCA/UserInterface/: MainDialog.cpp  MainDialog.hpp  MainDialog.ui
Source/RMG-Input/UserInterface/Widget/: ControllerImageWidget.cpp  ControllerWidget.cpp  ControllerWidget.hpp  ControllerWidget.ui
Source/RMG-Input/Utilities/: InputProfileDB.cpp
Source/RMG/UserInterface/: KailleraSessionManager.cpp  KailleraSessionManager.hpp  KailleraUIBridge.cpp  KailleraUIBridge.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  UIResources.qrc
Source/RMG/UserInterface/Dialog/: RaphnetInputDialog.cpp  RaphnetInputDialog.hpp  SettingsDialog.cpp  SettingsDialog.hpp  SettingsDialog.ui
Source/RMG/UserInterface/Dialog/Kaillera/: KailleraNetplayDialog.cpp  KailleraNetplayDialog.hpp  KailleraOptionsDialog.cpp  KailleraOptionsDialog.hpp  KailleraP2PDialog.cpp  KailleraP2PDialog.hpp  KailleraPlaybackDialog.cpp  KailleraPlaybackDialog.hpp  KailleraServerBrowserDialog.cpp  KailleraServerBrowserDialog.hpp  KailleraTraversalConfig.hpp  KailleraWaitingGamesDialog.cpp  KailleraWaitingGamesDialog.hpp
Source/RMG/Utilities/: UpdaterEnvCheck.cpp  UpdaterEnvCheck.hpp
Source/RMG/Utilities/KailleraExport/: EmulatorProxy.cpp  EmulatorProxy.hpp  FfmpegEncoder.cpp  FfmpegEncoder.hpp  FrameCapture.cpp  FrameCapture.hpp  KrecMp4Export.cpp  KrecMp4Export.hpp  KrecParser.cpp  KrecParser.hpp  PifReplay.cpp  PifReplay.hpp  VidExtProxy.cpp  VidExtProxy.hpp
Source/Script/: Build.sh
Source/n02/: CMakeLists.txt  errr.cpp  errr.h  kailleraclient.h  n02_callbacks.cpp  n02_client.cpp  n02_client.h  stats.cpp  stats.h
Source/n02/common/: dlist.h  k_framecache.h  k_socket.cpp  k_socket.h  nSTL.h  nSettings.cpp  nSettings.h  nThread.cpp  nThread.h  odlist.h  oslist.h  slist.h
Source/n02/core/: p2p_core.cpp  p2p_core.h  p2p_instruction.cpp  p2p_instruction.h  p2p_message.h
Source/n02/kcore/: k_instruction.cpp  k_instruction.h  k_message.h  kaillera_core.cpp  kaillera_core.h
ggpo-master/src/: CMakeLists.txt
